--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@vue-fw-lerna/utils",
-    "version": "0.0.0",
+    "version": "0.0.2-alpha.0",
     "description": "> TODO: description",
     "author": "scott <scott@boardware.com>",
     "homepage": "",
