--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
         "gen": "bash ./scripts/gc.sh",
         "bootstrap": "yarn --frozen-lockfile && npx lerna bootstrap && yarn gen:version",
         "gen:version": "node build/gen-version.js",
-        "build": "yarn bootstrap && yarn build:lib && yarn build:lib-full && yarn build:esm",
+        "build": "yarn bootstrap && yarn build:esm-bundle && yarn build:lib && yarn build:esm && yarn build:lib-full",
         "clean:lib": "rimraf lib",
         "build:lib": "cross-env LIBMODE=core webpack --config ./build/webpack.config.js",
         "build:lib-full": "cross-env LIBMODE=full webpack --config ./build/webpack.config.js",
-        "build:esm-bundle": "rollup --config ./build/rollup.config.bundle.js && yarn build:type",
+        "build:esm-bundle": "rollup --config ./build/rollup.config.bundle.js",
         "build:type": "node build/gen-type.js",
         "build:esm": "node ./build/bincomp.js",
         "build:utils": "cross-env BABEL_ENV=utils babel packages/utils --extensions .ts --out-dir lib/utils",
         "build:locale": "cross-env BABEL_ENV=utils babel packages/locale --extensions .ts --out-dir lib/locale",
         "build:locale-umd": "node ./build/build-locale.js",
         "build:theme": "rimraf packages/theme-chalk/lib && gulp build --gulpfile packages/theme-chalk/gulpfile.js && cp-cli packages/theme-chalk/lib lib/theme-chalk && rimraf packages/theme-chalk/lib",
-        "lint": "eslint ./packages --ext .vue,.js,.ts",
-        "lint-fix": "eslint --fix ./packages --ext .vue,.js,.ts",
+
         "website-build": "rimraf website-dist && cross-env NODE_ENV=production webpack --config ./website/webpack.config.js",
         "website-dev": "webpack-dev-server --config ./website/webpack.config.js",
         "website-dev:play": "cross-env PLAY_ENV=true yarn website-dev",
@@ -109,16 +108,8 @@
             "path": "./node_modules/cz-conventional-changelog"
         }
     },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged",
-            "pre-push-todo-open": "npm run test",
-            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-        }
-    },
-    "lint-staged": {
-        "*.{js,ts,vue}": "eslint --fix"
-    },
+
+
     "workspaces": [
         "packages/*"
     ],
