--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "@vue-fw-lerna/utils",
+    "name": "@vue-fw-lerna/tools",
     "version": "0.0.2-alpha.0",
     "description": "> TODO: description",
     "author": "scott <scott@boardware.com>",
     "homepage": "",
     "license": "ISC",
-    "main": "index.js",
+    "main": "dist/index.js",
     "directories": {
         "lib": "lib",
         "test": "__tests__"
@@ -18,5 +18,6 @@
     },
     "scripts": {
         "test": "echo \"Error: run tests from root\" && exit 1"
-    }
+    },
+    "gitHead": "c4f344b1e2575933187822b02ced7edc1cba7d17"
 }
