--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "gen": "bash ./scripts/gc.sh",
         "bootstrap": "yarn --frozen-lockfile && npx lerna bootstrap && yarn gen:version",
         "gen:version": "node build/gen-version.js",
-        "build": "yarn bootstrap && yarn build:esm-bundle && yarn build:lib && yarn build:esm && yarn build:lib-full",
+        "build": "yarn bootstrap && yarn build:esm-bundle && yarn build:lib && yarn build:lib-full && yarn build:esm",
         "clean:lib": "rimraf lib",
         "build:lib": "cross-env LIBMODE=core webpack --config ./build/webpack.config.js",
         "build:lib-full": "cross-env LIBMODE=full webpack --config ./build/webpack.config.js",
