--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -19,5 +19,8 @@
     "scripts": {
         "test": "echo \"Error: run tests from root\" && exit 1"
     },
-    "gitHead": "8c50aee247cf3467ebd43886478c6ec08b303fd0"
+    "gitHead": "8c50aee247cf3467ebd43886478c6ec08b303fd0",
+    "dependencies": {
+        "undefined": "D:\\boardware_work\\lerna\\vue-fw-lerna"
+    }
 }
