--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@vue-fw-lerna/tools",
-    "version": "0.0.4-alpha.0",
+    "version": "0.0.5",
     "description": "> TODO: description",
     "author": "scott <scott@boardware.com>",
     "homepage": "",
