--- a/packages/vue-fw-lerna/package.json
+++ b/packages/vue-fw-lerna/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vue-fw-lerna",
-    "version": "0.0.7",
+    "version": "0.0.8-alpha.0",
     "description": "> TODO: description",
     "author": "scott <scott@boardware.com>",
     "homepage": "",
